objects/LiveMessageSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CustomerDataURL__c</fullName>
        <label>Customer Data URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CustomerNumberLength__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Length of customer number in the Customer service</description>
        <label>Customer number length</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerNumberRegEx__c</fullName>
        <label>Customer Number RegEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerServicePassword__c</fullName>
        <label>CustomerServicePassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerServiceURL__c</fullName>
        <label>CustomerServiceURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CustomerServiceUser__c</fullName>
        <label>CustomerServiceUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdleMessageTime__c</fullName>
        <label>IdleMessageTime</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesToBlockAfterFbRetriesLimit__c</fullName>
        <label>Minutes to block after fb retries limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinutesToBlockAfterRetriesLimit__c</fullName>
        <label>Minutes to block after retries limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFacebookRetries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of facebook retries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfRetries__c</fullName>
        <label>Number of retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RetentionCampaignType__c</fullName>
        <label>Retention Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Link__c</fullName>
        <label>Siebel Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabOrangeMarker__c</fullName>
        <label>TabOrangeMarker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TabYellowMarker__c</fullName>
        <label>TabYellowMarker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LiveMessageSettings</label>
</CustomObject>